k8s/base/books-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-service
  namespace: library-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-service
  template:
    metadata:
      labels:
        app: books-service
    spec:
      containers:
        - name: books-service
          image: sirinamarwa/books-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: books-service
  namespace: library-app
spec:
  selector:
    app: books-service
  ports:
    - port: 3001
      targetPort: 3001
