k8s/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-postgres
  namespace: library-app
spec:
  clusterIP: None
  selector:
    app: books-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: books-postgres
  namespace: library-app
spec:
  serviceName: books-postgres
  replicas: 1
  selector:
    matchLabels:
      app: books-postgres
  template:
    metadata:
      labels:
        app: books-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
