k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  namespace: library-app
spec:
  ingressClassName: nginx
  rules:
    - host: library.local
      http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: books-service
                port:
                  number: 3001
